--- a/smurfs/package.json
+++ b/smurfs/package.json
@@ -10,7 +10,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "watchman": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
